fix number alignment in EOC #1986

--- a/css/ccap-astronomy.css
+++ b/css/ccap-astronomy.css
@@ -3161,6 +3161,7 @@ div.book div > div.section > div.section > div.section div.titlepage > div > div
 }
 .cnx-eoc .problem::before {
   padding-right: .5em;
+  line-height: 17px;
 }
 .cnx-eoc .empty {
   display: hidden;
@@ -5329,6 +5330,8 @@ div.book > div.chapter > div.titlepage div div > h1.title::after {
   display: inline-block;
   width: 95%;
   margin-top: 0px;
+  line-height: 17px;
+  margin-bottom: 0;
 }
 .cnx-eoc.review-questions > .section > div.body div.orderedlist > ol.orderedlist,
 .cnx-eoc.thought-questions > .section > div.body div.orderedlist > ol.orderedlist,
