--- a/css/refactor/astronomy-slots.less
+++ b/css/refactor/astronomy-slots.less
@@ -563,12 +563,12 @@
       display: inline;
     }
   }
-  #image{
+  #image {
     .style(any; book-end; solution) {
       display: block;
     }
   }
-  #problem{
+  #problem {
     .style('review-question-number'; chapter-end; exercises) {
       font-family: @font-family;
       display: inline-block;
@@ -580,6 +580,11 @@
       display: inline-block;
       width: 95%;
       margin-top: 0px;
+      line-height: 17px;
+      margin-bottom: 0;
+    }
+    .number(@kind; chapter-end; ...) {
+      line-height: 17px;
     }
   }
   #footnote {
